2011-07-26	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1851/doc
	* user/conf.t: Fix typo in CONFIGURE_MESSAGE_BUFFER_MEMORY example.

2011-03-04	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1744/doc
	* user/clock.t: rtems_clock_time_value type uses changed to struct
	timeval.

2011-02-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* common/cpright.texi: Update copyright.

2011-02-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* setup.def, shell/preface.texi: Update version.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-01-02	Danila Bespalov <danila DOT bespalov AT gmail DOT com>

	* started/buildc.t, started/buildrt.t, started/nt.t, started/require.t,
	started/sample.t: Review and improve.

2010-11-24	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1674/doc
	* user/Makefile.am, user/dirstat.texi: Fix bad node reference.

2010-11-11	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1716/doc
	* user/concepts.t: print_name example used a variable which did not
	match the name of the passed in parameter.

2010-11-01	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1714/doc
	* user/datatypes.t, user/intr.t: Add missing description of
	rtems_status_codes.

2010-08-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1513/doc
	* user/chains.t: Added missing functions.  Uniform text for
	unprotected functions.

2010-08-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1650/cpukit
	* user/part.t: Clarify.

2010-06-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Don't install html_imagesdir unconditionally.
	* main.am: Don't install html_projectdir unconditionally.
	* cpu_supplement/Makefile.am: Include main.am.

2010-06-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ada_user/Makefile.am, bsp_howto/Makefile.am,
	cpu_supplement/Makefile.am, develenv/Makefile.am,
	filesystem/Makefile.am, itron3.0/Makefile.am,
	networking/Makefile.am, new_chapters/Makefile.am,